<resources>
    <string name="app_name">LaCoupe</string>
    <string name="title_scores">Scores</string>
    <string name="title_standings">Standings</string>
    <string name="setup_player_profile_message">It looks like it\'s your first time here.\nSetup your player profile.</string>
    <string name="player_name_hint">Player Name</string>
    <string name="player_number_hint">Jersey Number</string>
    <string name="greetingUser">%s, &lt;br/> &lt;b> %s &lt;/b></string>
    <string name="goodMorning">Good Morning</string>
    <string name="goodAfternoon">Good Afternoon</string>
    <string name="goodEvening">Good Evening</string>
    <string name="hello">Hey</string>
    <string name="add_new_player_profile_message">Add a new player to the competition by\nfilling in the fields below.</string>
    <string name="title_new_player">New Player</string>
    <string name="error_empty_fields">Fields cannot be empty.</string>
    <string name="error_name_invalid">Player name cannot exceed 50 characters.</string>
    <string name="error_number_invalid">Jersey number must be between 1 and 99.</string>
    <string name="error_number_taken">Jersey number is already taken.</string>
    <string name="position">#</string>
    <string name="player">Player</string>
    <string name="games_played">GP</string>
    <string name="win">W</string>
    <string name="add_new_game">Add a new game by\nfilling in the match details.</string>
    <string name="game_location_hint">Field Name</string>
    <string name="game_date_hint">Select Date</string>
    <string name="title_new_game">New Game</string>
    <string name="add_participants">Add Participants</string>
    <string name="enter_score">Enter Player Scores</string>
    <string name="error_empty_field_name">Field not entered.</string>
    <string name="error_field_invalid">Field name cannot exceed 50 characters.</string>
    <string name="player_number">#%s</string>
    <string name="player_score_hint">0</string>
</resources>
